--- a/car-rental-app/src/app/components/car-list/car-list.component.scss
+++ b/car-rental-app/src/app/components/car-list/car-list.component.scss
@@ -37,3 +37,9 @@ h2 {
   background-color: #6c757d;
   color: #fff;
 }
+.card-img-top {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 5px;
+}
