resolve the route problem

--- a/car-rental-app/src/app/components/car-list/car-list.component.html
+++ b/car-rental-app/src/app/components/car-list/car-list.component.html
@@ -28,7 +28,10 @@
             <button class="btn btn-primary btn-sm" [routerLink]="['/rent', car.id]">
               Rent Now
             </button>
-            <button class="btn btn-outline-secondary btn-sm">Details</button>
+          <button class="btn btn-outline-secondary btn-sm" [routerLink]="['/details']">
+            Details
+          </button>
+
           </div>
         </div>
       </div>
