--- a/car-rental-app/src/app/components/rent-car/rent-car.component.scss
+++ b/car-rental-app/src/app/components/rent-car/rent-car.component.scss
@@ -9,7 +9,13 @@
   justify-content: center;
 }
 
-.img-fluid {
-  max-height: 400px;
+.fixed-img {
+  width: 100%;
+  max-width: 400px;
+  height: 300px;
   object-fit: cover;
+}
+
+.bg-light {
+  background-color: #f8f9fa;
 }
