--- a/car-rental-app/src/app/components/rent-car/rent-car.component.scss
+++ b/car-rental-app/src/app/components/rent-car/rent-car.component.scss
@@ -1,17 +1,48 @@
-.card-body {
-  padding: 2rem;
+.card{
+  margin-top: 25px;
+}
+.card.mb-4 {
+  opacity: 1;
+  transform: translateY(0);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.card .img-fluid {
+  object-fit: cover;
+  height: 100%;
+  max-height: 350px; 
+  width: 100%;
+  transition: transform 0.3s ease;
+}
+.card:hover .img-fluid {
+  transform: scale(1.05);
 }
 
-.card-title {
-  font-size: 1.75rem;
-  font-weight: 700;
+.card.mb-4:hover {
+  transform: scale(1.05) translateY(-5px);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
 
-.card-text {
-  font-size: 1.1rem;
+
+.card.mb-4 {
+  opacity: 0;
+  transform: translateY(30px);
+  animation: fadeInUp 0.2s forwards;
 }
 
-.btn {
-  padding: 0.6rem 1.2rem;
-  font-size: 1rem;
+
+@keyframes fadeInUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+.card-img-top {
+  transition: transform 0.5s ease;
+}
+
+
+.card.mb-4:hover .card-img-top {
+  transform: scale(1.03);
 }
